# nnUnetV2-Dental-Segmentator

./: .gitignore  README.md  pyproject.toml
dseg/: cli.py  constants.py  io.py  nnunet.py  postprocess.py
