[project]
name = "nnunet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "nnunetv2>=2.6.2",
    "simpleitk>=2.5.3",
    "numpy>=2.4.1",
    "nibabel>=5.3.3",
    "scipy>=1.17.0",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }
